Fixing #3039947, wbesite creature layout broken

--- a/content/scripts/monster.css
+++ b/content/scripts/monster.css
@@ -1,41 +1,3 @@
-.creature {
-	text-align: center;
-}
-
-.creature img {
-	border: 1px solid black;
-}
-
-.creature .name {
-	text-align: left;
-	font-size: 36px;
-	font-family: monospace tahoma courier;
-}
-
-.creature .level {
-	text-align: left;
-	font-size: 18px;
-}
-
-.creature .xp {
-	text-align: left;
-	font-size: 14px;
-}
-
-.creature .respawn {
-	text-align: left;
-	font-size: 14px;
-}
-
-.creature .description {
-	padding: 5px;
-	border: 1px solid #BBBBBB;
-	background: #DDDDDD;
-	font-style: italic;
-	margin-top: 12px;
-	margin-bottom: 12px;
-}
-
 .row {
 	margin-bottom: 5px;
 }
